Updating with latest version

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Dummy</title>
-    <meta name="description" content="">
+    <title>ember-google-map (simple demo)</title>
+    <meta name="description" content="Dead simple example of ember-google-map">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/ember-google-map/">
