--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ember-google-map (simple demo)</title>
+    <title>ember-google-map | Huafu Gandon</title>
     <meta name="description" content="Dead simple example of ember-google-map">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
