Updated demo app

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -13,7 +13,30 @@
     <link rel="stylesheet" href="assets/dummy.css">
   </head>
   <body>
+    <div class="social-networks-bar">
+      <iframe
+        src="http://ghbtns.com/github-btn.html?user=huafu&repo=ember-google-map&type=watch&count=true"
+        allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+      <iframe
+        src="//platform.twitter.com/widgets/follow_button.html?screen_name=HuafuGandon"
+        style="width: 240px; height: 20px;"
+        allowtransparency="true"
+        frameborder="0"
+        scrolling="no">
+      </iframe>
+    </div>
+    <div id="application"></div>
     <script src="assets/vendor.js"></script>
     <script src="assets/dummy.js"></script>
+    <hr/>
+    <h2>Sources</h2>
+    <div class="sources">
+      <script src="https://gist.github.com/huafu/09acce20bfd31bba5662.js?file=marker-info-window.hbs"></script>
+      <hr/>
+      <script src="https://gist.github.com/huafu/09acce20bfd31bba5662.js?file=application.js"></script>
+      <hr/>
+      <script src="https://gist.github.com/huafu/09acce20bfd31bba5662.js?file=application.hbs"></script>
+    </div>
+
   </body>
 </html>
