Updated to ember-cli 0.1.2 + fixed package name

--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/dummy.css">
   </head>
   <body>
+    {{content-for 'body'}}
     <div class="social-networks-bar">
       <iframe
         src="http://ghbtns.com/github-btn.html?user=huafu&repo=ember-google-map&type=watch&count=true"
