Updating GitHub pages

--- a/index.html
+++ b/index.html
@@ -8,15 +8,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/ember-google-map/">
-<meta name="dummy/config/environment" content="%7B%22modulePrefix%22%3A%22dummy%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%7D%7D">
+<meta name="dummy/config/environment" content="%7B%22modulePrefix%22%3A%22dummy%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D">
 
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3"></script>
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3"></script>
 
     <link rel="stylesheet" href="assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
     <link rel="stylesheet" href="assets/dummy-3a58f2834a83366d4c2f58e2a97aa52f.css">
   </head>
   <body>
-    <script src="assets/vendor-e8f03ff44d5f6de07be6fdbb98d5c5c0.js"></script>
-    <script src="assets/dummy-a32d7885dcd71eda51158dcf49ec7043.js"></script>
+    
+
+    <div class="social-networks-bar">
+      <iframe
+        src="http://ghbtns.com/github-btn.html?user=huafu&repo=ember-google-map&type=watch&count=true"
+        allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+      <iframe
+        src="//platform.twitter.com/widgets/follow_button.html?screen_name=HuafuGandon"
+        style="width: 240px; height: 20px;"
+        allowtransparency="true"
+        frameborder="0"
+        scrolling="no">
+      </iframe>
+    </div>
+    <div id="application"></div>
+    <script src="assets/vendor-afa54726af253d9c64b9f92d5b9b0d9a.js"></script>
+    <script src="assets/dummy-d6cc7dc83cb9f94f839311cd6f8d0c7c.js"></script>
+    <hr/>
+    <h2>Sources</h2>
+    <div class="sources">
+      <script src="https://gist.github.com/huafu/09acce20bfd31bba5662.js?file=marker-info-window.hbs"></script>
+      <hr/>
+      <script src="https://gist.github.com/huafu/09acce20bfd31bba5662.js?file=application.js"></script>
+      <hr/>
+      <script src="https://gist.github.com/huafu/09acce20bfd31bba5662.js?file=application.hbs"></script>
+    </div>
+
   </body>
 </html>
