--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/ember-google-map/">
-<meta name="dummy/config/environment" content="%7B%22modulePrefix%22%3A%22dummy%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%22%2C%22font-src%22%3A%22%27self%27%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%22%2C%22style-src%22%3A%22%27self%27%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22exportApplicationGlobal%22%3Afalse%7D">
+<meta name="dummy/config/environment" content="%7B%22modulePrefix%22%3A%22dummy%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%7D%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20%27unsafe-inline%27%20%27unsafe-eval%27%20*.googleapis.com%20maps.gstatic.com%20gist.github.com%22%2C%22font-src%22%3A%22%27self%27%20fonts.gstatic.com%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%20*.gstatic.com%20*.googleapis.com%22%2C%22style-src%22%3A%22%27self%27%20%27unsafe-inline%27%20gist-assets.github.com%20fonts.googleapis.com%22%2C%22frame-src%22%3A%22ghbtns.com%20platform.twitter.com%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22exportApplicationGlobal%22%3Afalse%7D">
+
 
 <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3"></script>
 
@@ -17,6 +18,7 @@
   </head>
   <body>
     
+
 
     <div class="social-networks-bar">
       <iframe
@@ -31,8 +33,8 @@
       </iframe>
     </div>
     <div id="application"></div>
-    <script src="assets/vendor-afa54726af253d9c64b9f92d5b9b0d9a.js"></script>
-    <script src="assets/dummy-d6cc7dc83cb9f94f839311cd6f8d0c7c.js"></script>
+    <script src="assets/vendor-eed414e5e1997d070a1015fbdd20612c.js"></script>
+    <script src="assets/dummy-5d188ea4c4fffd9ed3fbdebe354fe3f4.js"></script>
     <hr/>
     <h2>Sources</h2>
     <div class="sources">
