--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -21,7 +21,7 @@
         src="http://ghbtns.com/github-btn.html?user=huafu&repo=ember-google-map&type=watch&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
       <iframe
-        src="//platform.twitter.com/widgets/follow_button.html?screen_name=HuafuGandon"
+        src="//platform.twitter.com/widgets/follow_button.html?screen_name=huafu_g"
         style="width: 240px; height: 20px;"
         allowtransparency="true"
         frameborder="0"
