Updating GitHub pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/ember-google-map/" />
-<meta name="dummy/config/environment" content="%7B%22modulePrefix%22%3A%22dummy%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22rootElement%22%3A%22%23application%22%7D%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20%27unsafe-inline%27%20%27unsafe-eval%27%20*.googleapis.com%20maps.gstatic.com%20gist.github.com%22%2C%22font-src%22%3A%22%27self%27%20fonts.gstatic.com%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%20*.gstatic.com%20*.googleapis.com%22%2C%22style-src%22%3A%22%27self%27%20%27unsafe-inline%27%20gist-assets.github.com%20fonts.googleapis.com%22%2C%22frame-src%22%3A%22ghbtns.com%20platform.twitter.com%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22googleMap%22%3A%7B%22lazyLoad%22%3Atrue%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
+<meta name="dummy/config/environment" content="%7B%22modulePrefix%22%3A%22dummy%22%2C%22environment%22%3A%22production%22%2C%22baseURL%22%3A%22/ember-google-map/%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%7D%2C%22APP%22%3A%7B%22rootElement%22%3A%22%23application%22%7D%2C%22contentSecurityPolicy%22%3A%7B%22default-src%22%3A%22%27none%27%22%2C%22script-src%22%3A%22%27self%27%20%27unsafe-inline%27%20%27unsafe-eval%27%20*.googleapis.com%20maps.gstatic.com%20gist.github.com%22%2C%22font-src%22%3A%22%27self%27%20fonts.gstatic.com%22%2C%22connect-src%22%3A%22%27self%27%22%2C%22img-src%22%3A%22%27self%27%20*.gstatic.com%20*.googleapis.com%22%2C%22style-src%22%3A%22%27self%27%20%27unsafe-inline%27%20gist-assets.github.com%20fonts.googleapis.com%22%2C%22frame-src%22%3A%22ghbtns.com%20platform.twitter.com%22%2C%22media-src%22%3A%22%27self%27%22%7D%2C%22googleMap%22%3A%7B%22lazyLoad%22%3Atrue%7D%2C%22contentSecurityPolicyHeader%22%3A%22Content-Security-Policy-Report-Only%22%2C%22exportApplicationGlobal%22%3Afalse%7D" />
 <meta name="ember-google-map-sdk-url" content="//maps.googleapis.com/maps/api/js?v=3">
 
     <link rel="stylesheet" href="assets/vendor-d41d8cd98f00b204e9800998ecf8427e.css">
@@ -23,7 +23,7 @@
         src="http://ghbtns.com/github-btn.html?user=huafu&repo=ember-google-map&type=watch&count=true"
         allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
       <iframe
-        src="//platform.twitter.com/widgets/follow_button.html?screen_name=HuafuGandon"
+        src="//platform.twitter.com/widgets/follow_button.html?screen_name=huafu_g"
         style="width: 240px; height: 20px;"
         allowtransparency="true"
         frameborder="0"
@@ -31,8 +31,8 @@
       </iframe>
     </div>
     <div id="application"></div>
-    <script src="assets/vendor-eb90f8899f302bb2236f6f306075416c.js"></script>
-    <script src="assets/dummy-9080719cd41bef730eeb2c0443e681c1.js"></script>
+    <script src="assets/vendor-8c6df3518edd449676eeef59645dacce.js"></script>
+    <script src="assets/dummy-b5eefae5a90d960619270b6414bd53a9.js"></script>
     <hr/>
     <h2>Sources</h2>
     <div class="sources">
